--- a/.github/actions/git-diff-on-components/package.json
+++ b/.github/actions/git-diff-on-components/package.json
@@ -1,16 +1,17 @@
 {
   "name": "git-diff-on-components",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Git diff on components",
+  "main": "dist/index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build index.mjs --license licenses.txt"
   },
   "keywords": [],
-  "author": "",
+  "author": "pipedream",
   "license": "ISC",
   "dependencies": {
     "@actions/core": "^1.9.0",
-    "@actions/github": "^5.0.3"
+    "@actions/github": "^5.0.3",
+    "@vercel/ncc": "^0.34.0"
   }
 }
