github action version 0.0.17

--- a/.github/actions/git-diff-on-components/action.yml
+++ b/.github/actions/git-diff-on-components/action.yml
@@ -11,8 +11,8 @@ inputs:
     description: ""
     required: true
 outputs:
-  msg:
-    description: "Message"
+  components_that_did_not_modify_version:
+    description: "List of file paths of components that did not modify version"
 runs:
   using: "node16"
   main: "dist/index.mjs"
