--- a/.github/actions/git-diff-on-components/action.yml
+++ b/.github/actions/git-diff-on-components/action.yml
@@ -8,7 +8,7 @@ inputs:
     description: "Head commit SHA"
     required: true
   all_files:
-    description: ""
+    description: "List of all files comming from changed_files step in check_version job github action workflow"
     required: true
 outputs:
   components_that_did_not_modify_version:
