--- a/.github/actions/git-diff-on-components/package.json
+++ b/.github/actions/git-diff-on-components/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@actions/core": "^1.9.0",
     "@actions/exec": "^1.1.1",
-    "@vercel/ncc": "^0.34.0"
+    "@vercel/ncc": "^0.34.0",
+    "lodash.difference": "^4.5.0"
   }
 }
