--- a/.github/actions/git-diff-on-components/package.json
+++ b/.github/actions/git-diff-on-components/package.json
@@ -4,7 +4,7 @@
   "description": "Git diff on components",
   "main": "dist/index.mjs",
   "scripts": {
-    "build": "ncc build index.mjs --license licenses.txt -m"
+    "build": "ncc build index.mjs --license licenses.txt"
   },
   "keywords": [],
   "author": "pipedream",
