modified version to 0.0.2

--- a/.github/actions/git-diff-on-components/package.json
+++ b/.github/actions/git-diff-on-components/package.json
@@ -4,7 +4,8 @@
   "description": "Git diff on components",
   "main": "dist/index.mjs",
   "scripts": {
-    "build": "ncc build index.mjs --license licenses.txt"
+    "clean": "rm -rf ./dist",
+    "build": "npm run clean && ncc build index.mjs --license licenses.txt"
   },
   "keywords": [],
   "author": "pipedream",
