modified version to 0.0.2

--- a/.github/actions/git-diff-on-components/package.json
+++ b/.github/actions/git-diff-on-components/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.mjs",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "npm run clean && ncc build index.mjs --license licenses.txt"
+    "build": "npm run clean && ncc build index.js --license licenses.txt"
   },
   "keywords": [],
   "author": "pipedream",
