--- a/.github/actions/git-diff-on-components/package.json
+++ b/.github/actions/git-diff-on-components/package.json
@@ -2,7 +2,7 @@
   "name": "git-diff-on-components",
   "version": "1.0.0",
   "description": "Git diff on components",
-  "main": "dist/index.mjs",
+  "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf ./dist",
     "build": "npm run clean && ncc build src/index.js --license licenses.txt"
