--- a/.github/actions/git-diff-on-components/package.json
+++ b/.github/actions/git-diff-on-components/package.json
@@ -15,6 +15,7 @@
     "@actions/exec": "^1.1.1",
     "@vercel/ncc": "^0.34.0",
     "dependency-tree": "^8.1.2",
-    "lodash.difference": "^4.5.0"
+    "lodash.difference": "^4.5.0",
+    "lodash.uniqwith": "^4.5.0"
   }
 }
